--- a/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
+++ b/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         version: [latest, 3, 3.2, 2, 2.7, 2.5]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container:
       image: public.ecr.aws/lambda/ruby:${{ matrix.version }}
     steps:
@@ -27,11 +27,12 @@ jobs:
   consolidate-data:
     needs:
       - collect-data
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
+          set-safe-directory: ${{ github.workspace }}
       - uses: cliffano/command-loop-action@main
         with:
           items: ${{ env.VERSIONS }}
